---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("Actor"), span: Span { start: 186, end: 191 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// Test error: message compilation"), Whitespace("\n"), LineComment("// The error: message should compile to erlang:error({beamtalk_error, Message})"), Whitespace("\n\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("subclass:"), span: Span { start: 192, end: 201 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("TestActor"), span: Span { start: 202, end: 211 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("doError"), span: Span { start: 215, end: 222 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 223, end: 225 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("self"), span: Span { start: 226, end: 230 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("error:"), span: Span { start: 231, end: 237 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("This is a test error"), span: Span { start: 238, end: 260 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("errorWithVariable"), span: Span { start: 264, end: 281 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 282, end: 284 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("msg"), span: Span { start: 289, end: 292 }, leading_trivia: [Whitespace("\n    ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 293, end: 295 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: String("Dynamic error message"), span: Span { start: 296, end: 319 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("self"), span: Span { start: 324, end: 328 }, leading_trivia: [Whitespace("\n    ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("error:"), span: Span { start: 329, end: 335 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("msg"), span: Span { start: 336, end: 339 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 340, end: 340 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
